--- a/IngeteamApp/IngeteamApp.csproj
+++ b/IngeteamApp/IngeteamApp.csproj
@@ -65,9 +65,6 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Expression.Blend.Sdk.1.0.2\lib\net45\System.Windows.Interactivity.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -112,6 +109,9 @@
     <Compile Include="VIEW\ProgrammersViewer.xaml.cs">
       <DependentUpon>ProgrammersViewer.xaml</DependentUpon>
     </Compile>
+    <Compile Include="VIEW\SubTasksViewer.xaml.cs">
+      <DependentUpon>SubTasksViewer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="VIEW\TasksViewer.xaml.cs">
       <DependentUpon>TasksViewer.xaml</DependentUpon>
     </Compile>
@@ -129,6 +129,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="VIEW\ProgrammersViewer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="VIEW\SubTasksViewer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -172,6 +176,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
+    <Resource Include="Resources\IngeIco.ico" />
+    <Resource Include="Resources\IngeLogo.jpg.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
@@ -185,6 +191,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
