--- a/IngeteamApp/IngeteamApp.csproj
+++ b/IngeteamApp/IngeteamApp.csproj
@@ -176,8 +176,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
-    <Resource Include="Resources\IngeIco.ico" />
-    <Resource Include="Resources\IngeLogo.jpg.png" />
+    <Content Include="Resources\IngeIco.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\IngeLogo.jpg.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
